force-app/main/default/objects/HabilidadeContato__c/validationRules/LimiteLevel.validationRule-meta.xml
<ValidationRule>
    <fullName>LimiteLevel</fullName>
    <active>true</active>
    <description>Garante que o level vai ser de 0 a 100</description>
    <errorConditionFormula>OR (
    Level__c &lt; 0,
    Level__c &gt; 100
)</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>Habilidade do contato fora do intervalo permitido.</errorMessage>
</ValidationRule>